--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,6 +1,6 @@
 .logo {
     height: 32px;
-    background: rgba(255,255,255,.2);
+    background-image: url('./logo.png');
     margin: 16px;
   }
   
