--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,6 +1,26 @@
 .logo {
-    height: 32px;
-    background-image: url('./logo.png');
-    margin: 16px;
+    height: 150px;
+    margin: 0px;
   }
-  
+
+.logo img {
+  background-color: white;
+  height: 150px;
+  width: 100%;
+}
+.custom-filter-dropdown {
+  width: 300px;
+  padding: 8px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
+}
+
+.custom-filter-dropdown input {
+  width: 130px;
+  margin-right: 8px;
+}
+
+.highlight {
+  color: #f50;
+}
