--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -34,3 +34,8 @@
   background-image: url('../assets/logo.png');
   background-size: 100% 100%;
 }
+.sider-app {
+  height: 100%;
+  background-color: #12403E;
+  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.8);
+}
